apps/proxmox/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: 5055
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: seerr
  labels:
    kubernetes.io/service-name: seerr
    endpointslice.kubernetes.io/managed-by: fluxcd
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.59
    conditions:
      ready: true
ports:
  - name: http
    port: 5055
    protocol: TCP
